Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.4.0
-
None
-
-
62014e9ce (dev)
Description
Using qml6 tool on the following QML and clicking the button will trigger an infinite loop:
import QtQuick import QtQuick.Window import QtQuick.Controls import QtQuick.Layouts Window { title: "Test" visible: true Item { // uncommenting the following line prevents triggering the bug //anchors.centerIn: parent Button { text: "Popup" onClicked: popup.open() } Popup { id: popup x: Math.round((parent.width - width) / 2) y: Math.round((parent.height - height) / 2) ColumnLayout { Rectangle { width: 50 height: 50 color: "green" } Label { text: "hello" } Label { text: "world" } } } } }
Spamming the following messages:
qrc:/qt-project.org/imports/QtQuick/Controls/Fusion/Popup.qml: QML QQuickPopupItem: possible QQuickItem::polish() loop
qrc:/qt-project.org/imports/QtQuick/Controls/Fusion/Popup.qml: QML QQuickPopupItem: QQuickPopupItem called polish() inside updatePolish() of QQuickPopupItem
Attachments
Issue Links
- depends on
-
QTBUG-77647 Problems with positioning of Popup with default margins
-
- Closed
-